--- a/templates/Home/home.twig
+++ b/templates/Home/home.twig
@@ -3,10 +3,9 @@
     <div class="container">
         <div class= "row">
             <div class = "col-6">
-            left
-            </div>
-            <div class = "col-6">
-            right
+            Jesteś zalogowany jako: </br>
+            {{emailGet}}
+            </br>
             </div>
         </div>
     </div>
