Registration - validate password, Logout - redirect to login

--- a/templates/Home/home.twig
+++ b/templates/Home/home.twig
@@ -8,5 +8,8 @@
             </br>
             </div>
         </div>
+        <div>
+            <a href= "{{path('logout')}}">Wyloguj</a>
+        </div>
     </div>
  {% endblock %}
