--- a/templates/User/login.twig
+++ b/templates/User/login.twig
@@ -7,15 +7,23 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
         <form class="px-4 py-3" action="{{ path('login') }}" method="post">
-            <label for="username">Email:</label>
+        {#
+            <label for="username">Login</label>
             <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}"/>
+        #}
 
-            <label for="password">Hasło:</label>
+            <label for="username">Email</label>
+            <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}"/>  
+
+            <label for="password">Hasło</label>
             <input type="password" id="password" name="_password" class="form-control"/>
 
-            {# If you want to control the URL the user is redirected to on success
-            <input type="hidden" name="_target_path" value="/account"/> #}
+            <input type="hidden" name="_target_path" value="/home"/>
 
             <button type="submit" class="btn btn-secondary">Zaloguj się</button>
         </form>
+
+        <div>
+            <a href= "{{path('signup')}}">Załóż konto</a>
+        </div>
 {% endblock %}
