--- a/templates/User/registration.twig
+++ b/templates/User/registration.twig
@@ -7,8 +7,12 @@
                 </div>
             <form class="px-4 py-3" method="post">
                 <div class = "form-group">
-                    <label for="username">Email:</label>
-                    <input type="emal" name="email" class="form-control"/>
+                    <label for="name">Login:</label>
+                    <input type="text" name="name" class="form-control"/>
+                </div>
+                <div class = "form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" class="form-control"/>
                 </div>
                 <div class = "form-group">
                     <label for="password">Hasło:</label>
