--- a/templates/User/login.twig
+++ b/templates/User/login.twig
@@ -6,11 +6,9 @@
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
+    <h2>Zaloguj się</h2>
         <form class="px-4 py-3" action="{{ path('login') }}" method="post">
-        {#
-            <label for="username">Login</label>
-            <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}"/>
-        #}
+            <div>
 
             <label for="username">Email</label>
             <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}"/>  
@@ -20,10 +18,16 @@
 
             <input type="hidden" name="_target_path" value="/home"/>
 
-            <button type="submit" class="btn btn-secondary">Zaloguj się</button>
-        </form>
+            <button type="submit" class="btn btn-secondary">Zaloguj</button>
+            </div>
+            <div>
+             <label>
+                <input type="checkbox" name="_remember_me" checked/>
+                Zapamiętaj mnie
+            </label>
+            </div>
 
-        <div>
-            <a href= "{{path('signup')}}">Załóż konto</a>
-        </div>
+        </form>
+        <h3>Nie posiadasz konta</h3>
+            <a href= "{{path('signup')}}">Zarejestruj się</a>
 {% endblock %}
