Post create - add user, Home - add href

--- a/templates/Home/home.twig
+++ b/templates/Home/home.twig
@@ -12,4 +12,9 @@
             <a href= "{{path('logout')}}">Wyloguj</a>
         </div>
     </div>
+    
+    <div>
+        <h3>Dodaj post</h3>
+        <a href= "{{path('post')}}">Dodaj post</a>
+    </div>
  {% endblock %}
