--- a/templates/Home/home.twig
+++ b/templates/Home/home.twig
@@ -15,6 +15,6 @@
     
     <div>
         <h3>Dodaj post</h3>
-        <a href= "{{path('post')}}">Dodaj post</a>
+        <a href= "{{path('post_create')}}">Dodaj post</a>
     </div>
  {% endblock %}
