Test configuration. Structure of file- change

--- a/templates/Home/home.twig
+++ b/templates/Home/home.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
  {% block body %}
     <div class="container">
+        <h2>Panel Użytkownika</h2>
         <div class= "row">
             <div class = "col-6">
             Jesteś zalogowany jako: </br>
