--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,25 +1,43 @@
 @import '~bootstrap/scss/bootstrap';
 
 
-
 body{
-    background-color: rgb(221, 221, 226);
     margin-right: auto;
+    position: relative;
+    min-height: 100vh;
 }
 
 .header{
-    background-color: rgb(192, 190, 218);
-    padding-top: 15px;
-    padding-left: 20px;
-	margin-bottom: 20px;
-	border-bottom-style: solid;
+    background-color: rgb(8, 5, 48);
+    color: #fff;
+    padding: 20px;
+}
+
+.main {
+    display:flex;
+    margin: 20px;
+}
+
+.nav.flex-column {
+    width: 25%;
 }
 
 .contentmain {
-    width: 500px;
-    margin: auto;
+    line-height: 24px;
+    min-height: calc(100vh - 90px - 60px);
+    width: 75%;
+    margin-left: 20px;
 }
 
 .btn.btn-secondary {
     margin-top: 20px;
+}
+
+.footer {
+    background-color: rgb(8, 5, 48);
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: absolute;
+    width: 100%;
 }
