--- a/templates/Post/category.html.twig
+++ b/templates/Post/category.html.twig
@@ -3,7 +3,7 @@
     {% for category in categories %}
 
     <li class="nav-item">
-      <a class="nav-link active" href={{path('post_show', {'categoryname':category.name|lower|slug, 'id':category.id})}}>{{category.name}}</a>
+      <a class="nav-link active" href={{path('post_display', {'categoryname':category.name|lower|slug, 'id':category.id})}}>{{category.name}}</a>
     </li>
 
     {% endfor %}
