--- a/templates/Post/create.html.twig
+++ b/templates/Post/create.html.twig
@@ -4,7 +4,7 @@
         <div class= "row">
             <div class = "col-6">
                 <div>
-                    {% include 'displayerror.twig' %}
+                    {% include 'displayerror.html.twig' %}
                 </div>
             <form method="post">
                 <label for="exampleFormControlTextarea1" class="form-label">Treść postu</label>
