--- a/templates/User/registration.html.twig
+++ b/templates/User/registration.html.twig
@@ -4,7 +4,7 @@
         <div class= "row">
             <div class = "col-6">
                 <div>
-                    {% include 'displayerror.twig' %}
+                    {% include 'displayerror.html.twig' %}
                 </div>
             <form class="px-4 py-3" method="post">
                 <div class = "form-group">
