--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -7,8 +7,18 @@
         <ul class="nav justify-content-end">
             {% if app.user %}
                 <li class="nav-item">
+                    <a class="nav-link" href={{path('category_display')}}>Kategorie</a>
+                </li>
+                 {% if is_granted('ROLE_ADMIN') %}
+                <li class="nav-item">
+                    <a class="nav-link" href={{path('admin_dashboard')}}>Admin Panel</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
                     <a class="nav-link" href={{path('dashboard')}}>Moje konto</a>
                 </li>
+                {% endif %}
+                
                 <li class="nav-item">
                     <a class="nav-link" href={{path('logout')}}>Wyloguj</a>
                 </li>
