Integration tests, Flash messages - coment

--- a/templates/Category/create.html.twig
+++ b/templates/Category/create.html.twig
@@ -3,6 +3,9 @@
     <div class="container">
         <div class= "row">
             <div class = "col-6">
+
+            <h2> Stwórz kategorię {# TODO #} </h2>
+
                 <div>
                     {% include 'displayerror.html.twig' %}
                 </div>
