--- a/templates/Category/display.html.twig
+++ b/templates/Category/display.html.twig
@@ -6,7 +6,7 @@
                 <div>
                     {% include 'displayerror.html.twig' %}
                 </div>
-                
+            <h2> Kategorie </h2>
             <table class="table">
                 <thead>
                     <tr>
